--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "i18next": "^25.8.13",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.4",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
