--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-i18next": "^16.5.4",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^4.6.5",
     "remark-gfm": "^4.0.0",
     "vis-data": "^7.1.9",
     "vis-timeline": "^7.7.3"
